--- a/styles/style.css
+++ b/styles/style.css
@@ -32,3 +32,42 @@ h1 {
   text-align:center;
   padding:10px 0;
 }
+.levels {
+  color:white;
+  background-color:red;
+  border-radius:10px;
+  text-align:center;
+  width:100px;
+  height:40px;
+  font-family: 'Fredoka One', sans-serif;
+  font-weight:bolder;
+  letter-spacing:2px;
+}
+#main, #starting {
+  background-color: white;
+  margin:20px 50px;
+  padding:20px 0;
+  border-radius:30px;
+  height:auto;
+}
+#main {
+  display:none;
+}
+div,p {
+  margin-bottom: 1rem;
+  text-align:center;
+  font-family: 'Fredoka One', sans-serif;
+    }
+.pokemon-name {
+  text-transform: capitalize;
+  font-weight: bold;
+}
+.pokemon-image, .image, .image-2 {
+  display: block;
+  width:150px;
+  margin:0 auto;
+}
+
+#result {
+  font-weight:bold;
+}
