--- a/styles/style.css
+++ b/styles/style.css
@@ -71,3 +71,13 @@ div,p {
 #result {
   font-weight:bold;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance:textfield;
+}
