added bg image and logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
 body {
-  background-image: url("images/pokeball-bg.png");
+  background-image: url("../images/pokeball-bg.png");
+}
+.logo {
+  width: 200px;
+  display: block;
+  margin: 0 auto;
 }
 #level {
   display: flex;
