--- a/styles/style.css
+++ b/styles/style.css
@@ -86,3 +86,27 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance:textfield;
 }
+#pikachu {
+	position: absolute;
+	bottom: 0px;
+	left: 25%;
+	margin-left: -25px;
+  height:100px;
+  width:90px;
+}
+#bulbasaur {
+	position: absolute;
+	bottom: 0px;
+	left: 50%;
+	margin-left: -50px;
+  height:100px;
+  width:90px;
+}
+#charmander {
+	position: absolute;
+	bottom: 0px;
+	left: 75%;
+	margin-left: -75px;
+  height:100px;
+  width:90px;
+}
