--- a/styles/style.css
+++ b/styles/style.css
@@ -91,22 +91,27 @@ input[type=number] {
 	bottom: 0px;
 	left: 25%;
 	margin-left: -25px;
-  height:100px;
-  width:90px;
+  height:50px;
+  width:45px;
 }
 #bulbasaur {
 	position: absolute;
 	bottom: 0px;
 	left: 50%;
 	margin-left: -50px;
-  height:100px;
-  width:90px;
+  height:50px;
+  width:45px;
 }
 #charmander {
 	position: absolute;
 	bottom: 0px;
 	left: 75%;
 	margin-left: -75px;
-  height:100px;
-  width:90px;
+  height:50px;
+  width: 45px;
+}
+@media only screen and (max-width: 600px) {
+  .bounce {
+    display:none;
+  }
 }
