--- a/styles/style.css
+++ b/styles/style.css
@@ -88,24 +88,32 @@ input[type=number] {
 }
 #pikachu {
 	position: absolute;
-	bottom: 0px;
-	left: 25%;
+	top:60px;
+	left: 10%;
 	margin-left: -25px;
   height:50px;
   width:45px;
 }
 #bulbasaur {
 	position: absolute;
-	bottom: 0px;
-	left: 50%;
+	top:60px;
+	left: 30%;
 	margin-left: -50px;
   height:50px;
   width:45px;
 }
 #charmander {
 	position: absolute;
-	bottom: 0px;
-	left: 75%;
+	top:60px;
+	left: 70%;
+	margin-left: -75px;
+  height:50px;
+  width: 45px;
+}
+#squirtle {
+	position: absolute;
+	top:60px;
+	left: 90%;
 	margin-left: -75px;
   height:50px;
   width: 45px;
