--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ body {
   background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 100%);
   border:10px solid black;
   margin:10px auto;
-  width:80%;
+  width:60%;
   font-weight:bolder;
   font-size:34px;
   padding:20px;
@@ -126,4 +126,7 @@ input[type=number] {
   .logo {
   width: 150px;
   }
+  #showPokemon {
+    width:80%;
+    font-weight:normal;
 }
