--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: space-around;
 }
-#learnMore {
+#learnMore, #submit {
   color:white;
   background-color:green;
   border-radius:10px;
@@ -18,7 +18,6 @@ body {
   width:150px;
   height:40px;
   font-family: 'Fredoka One', sans-serif;
-  font-weight:bolder;
   letter-spacing:2px;
 }
 #showPokemon {
@@ -46,7 +45,6 @@ h1 {
   width:100px;
   height:40px;
   font-family: 'Fredoka One', sans-serif;
-  font-weight:bolder;
   letter-spacing:2px;
 }
 #main, #starting {
