improved comments and indentation

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,6 @@ input[type=number] {
     font-weight:normal;
   }
   #bouncy {
-    display:none;
+    display:none; /*hides animation on small screen */
   }
 }
