--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@ div,p {
 }
 #score {
   color:red;
+  font-size:24px;
 }
 /*for congrats animation when correct answer is entered*/
 @keyframes blink {
